# sh4der-jockey

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  pipeline.json  post.glsl
.github/workflows/: rust.yml
docs/: readme.md  readme_en.md  readme_jp.md
example/: common.glsl  distort.glsl  pipeline.json  pipeline.yaml  post.glsl  scene.glsl
example/audio/: fft.vert  osci.vert  pipeline.json  pipeline.yaml  scene.frag  scene.glsl
example/blossom/: README.md  draw.frag  pipeline.yaml  present.frag
example/bpm/: pipeline.json  pipeline.yaml  scene.vert
example/compute/: pipeline.json  pipeline.yaml  present.glsl  test_comp.glsl
example/gltf/: pipeline.yaml  shader.frag  shader.vert  suzanne.glb
example/gltf-pbr/: README.md  pipeline.yaml  shader.frag  shader.vert
example/vertex/: pipeline.json  pipeline.yaml  shader.vert
src/: helper.rs  jockey.rs  main.rs  pipeline.rs  texture.rs  util.rs
src/defaults/: fs.glsl  pipeline.json  pipeline.yaml  scene.frag
src/jockey/: audio.rs  beatsync.rs  config.rs  geometry.rs  global_config.rs  matrix4.rs  mesh.rs  meshes_from_gltf.rs  midi.rs  mod.rs  ndi.rs  network.rs  pipeline.rs  playback.rs  stage.rs  uniforms.rs
src/jockey/shaders/: pass.frag  pass.vert  splash.frag  splash.vert
src/jockey/uniformable/: uniformable_1f.rs  uniformable_4f.rs  uniformable_matrix_4fv.rs
src/util/: average.rs  cache.rs  geometry.rs  geometry_attribute.rs  imgui_dockspace.rs  matrix3.rs  matrix4.rs  mesh.rs  mod.rs  ringbuffer.rs  texture.rs  uniformable.rs
src/util/uniformable/: uniformable_1f.rs
src/viewport/: mod.rs  platform.rs
src/viewport/platform/: callbacks.rs  proxy.rs
viewports/: Cargo.toml  README.md
viewports/examples/: wgpu.rs
viewports/src/: lib.rs  platform.rs  wgpu.rs
viewports/src/platform/: callbacks.rs  proxy.rs
