[package]
name = "sh4der-jockey"
version = "0.1.2"
edition = "2018"
build = "build.rs"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"

[dependencies]
as-any = "0.2"
async-std = { version = "1.9", default-features = false, features = ["std"] }
cpal = "0.13"
error-chain = "0.12"
futures = { version = "0.3", default-features = false }
getopts = "0.2"
gl = "0.14"
glutin = "0.26"
image = "0.23"
imgui = { git = "https://github.com/sp4ghet/imgui-rs", branch = "master" }
imgui-opengl-renderer = { git = "https://github.com/sp4ghet/rust-imgui-opengl-renderer", branch = "master" }
imgui-winit-support = { git = "https://github.com/sp4ghet/imgui-rs", branch = "master" }
lazy_static = "1.4"
midir = "0.7"
ndi = { git = "https://github.com/sp4ghet/ndi-rs", branch = "main" }
notify = "5.0.0-pre.7"
num-complex = "0.4"
rand = "0.8"
regex = "1.4"
rustfft = "6.0"
serde_yaml = "0.8"
take_mut = "0.2"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "5.1", default-features = false, features = ["build", "git"] }
